--- a/index.html
+++ b/index.html
@@ -64,7 +64,11 @@
 
 
 
-   
+   <div class="container">
+  <div class="box box71"><span>71 short</span></div>
+  <div class="box box72"><span>72 centered</span></div>
+  <div class="box box73"><span>73 loooooooooooooooong</span></div>
+</div>
 
 <h2>The Ethereum Blockchain Explorer</h2>
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for addresses, tokens, name tag, labels, websites.." title="Type in a name">
